--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -1,6 +1,6 @@
 -
   const pathStatics = '/statics'
-  const pathImage = `${pathStatics}/images`
+  const pathImage = `${pathStatics}/images/`
 
   const phone = { link: 'tel:+79536799464', mask: '+79536799464' }
   const mail = { link: 'mailto:zyazin.nikita@yandex.ru', mask: 'zyazin.nikita@yandex.ru' }
