--- a/web/frontend-client/assets/views/components/_layout/menu.pug
+++ b/web/frontend-client/assets/views/components/_layout/menu.pug
@@ -1,5 +1,5 @@
 .header__menu-mobile(data-element="menu")
-  span.header__menu-text Стулья Хит от производителя
+  span.header__menu-text Задник из кожкартона и стельки для обуви от производителя
   a.header__phone.header__phone_mobile.link_gray(href=phone.link)= phone.mask
   ul.menu__list-mobile
     each item in menuMobileList
