--- a/web/frontend-client/assets/views/components/index/cap.pug
+++ b/web/frontend-client/assets/views/components/index/cap.pug
@@ -3,7 +3,7 @@ section.cap(class = VIEW === 'index' ? 'cap_index' : '')
     .cap__block
       h1.cap__caption.caption!= 'Задник из кожкартона'
       h2.cap__subtitle.text от производителя
-      a.cap__button.button-orange.text-big(href="#book-discount", data-role="scroll-to-anchor") Получить каталог
+      a.cap__button.button-orange.text-big(href="#book-discount", data-role="scroll-to-anchor") Заказать
     picture.cap__picture
       - const capImagePath = `${pathImage}/cap/`
         img.cap__image(src=`${capImagePath}zadnik-cap.png`, alt="Задник из кожкартона", loading="lazy")
