--- a/web/frontend-client/assets/views/components/index/products.pug
+++ b/web/frontend-client/assets/views/components/index/products.pug
@@ -16,11 +16,11 @@
 
 .products(data-element="products", id="products")
   .products__cont.cont
-    h2.products__title.title Изготовленные товары
+    h2.products__title.title Товары
     each item in productList
       ul.products__list
         each image in item.images
           li.products__item
-            img.products__image(srcset=placeholder(120, 120), alt=`${image.name} - фото`, loading="lazy")
+            img.products__image(srcset=placeholder(270, 270), alt=`${image.name} - фото`, loading="lazy")
             span.products__name= image.name
             span.products__price= image.price + ' ₽'
