--- a/web/frontend-client/assets/views/pages/index.pug
+++ b/web/frontend-client/assets/views/pages/index.pug
@@ -6,3 +6,5 @@ block head
 block body
   include ../components/index/cap
   include ../components/index/products
+  include ../components/index/orders
+  include ../components/index/about
