Add frontend client components and initial layout structure

--- a/web/frontend-client/assets/styles/pages/_style.sass
+++ b/web/frontend-client/assets/styles/pages/_style.sass
@@ -9,4 +9,6 @@
 @import "../components/footer"
 @import "../components/header-mob"
 @import "../components/menu"
+@import "../components/cookies"
+@import "../components/order-form"
 
