--- a/web/frontend-client/assets/views/components/_layout/footer.pug
+++ b/web/frontend-client/assets/views/components/_layout/footer.pug
@@ -2,12 +2,12 @@ footer.footer
   .footer__cont.cont
     if VIEW === 'index'
       span.footer__logo
-        img.footer__image(src=`${pathImage}/logo.svg`, alt="Логотип")
+        img.footer__image(src=`${pathImage}logo.png`, alt="Логотип")
     else
-      a.footer__logo(href=getPage('index').link)
-        img.footer__image(src=`${pathImage}/logo.svg`, alt="Логотип")
+      a.footer__logo(href=getLinkPage('index'))
+        img.footer__image(src=`${pathImage}logo.png`, alt="Логотип")
     if VIEW === 'policy'
       span.footer__policy-link.text Политика конфиденциальности
     else
-      a.footer__policy-link.link-dark.text(href=getPage('policy').link) Политика конфиденциальности
+      a.footer__policy-link.link-dark.text(href=getLinkPage('policy')) Политика конфиденциальности
     span.footer__copyright.text © #{new Date().getFullYear()} Все права защищены
