--- a/web/frontend-client/assets/views/components/_layout/layout.pug
+++ b/web/frontend-client/assets/views/components/_layout/layout.pug
@@ -13,6 +13,8 @@ html(lang='ru')
     include header
     main.wrapper
       block body
+    include footer
+    include cookies
     include scripts
     each style in prefetchStyle()
       link(rel="prefetch", href=`${pathStatics}/styles/${style}${PRODUCTION ? `-${HASH}` : ''}.css`, as="style")
