--- a/web/frontend-client/assets/views/components/index/orders.pug
+++ b/web/frontend-client/assets/views/components/index/orders.pug
@@ -3,7 +3,7 @@
     { headline: 'Оставьте заявку', text: 'Заполните форму заказа на сайте'},
     { headline: 'Подтвердите заказ', text: 'Мы свяжемся с вами, поможем в выборе модели, согласуем характеристики и стоимость'},
     { headline: 'Изготовление', text: 'Производство изготовит заказ'},
-    { headline: 'Получите заказ', text: 'Доставка по РФ и СНГ от 7 рабочих дней'}
+    { headline: 'Получите заказ', text: 'Доставка по РФ от 6 рабочих дней'}
   ]
 
 .orders
