--- a/web/frontend-client/assets/views/pages/index.pug
+++ b/web/frontend-client/assets/views/pages/index.pug
@@ -8,3 +8,5 @@ block body
   include ../components/index/products
   include ../components/index/orders
   include ../components/index/about
+  include ../components/index/order-form
+  include ../components/index/faq-questions
