--- a/web/frontend-client/assets/styles/pages/index.sass
+++ b/web/frontend-client/assets/styles/pages/index.sass
@@ -4,3 +4,4 @@
 @import "../components/products"
 @import "../components/orders"
 @import "../components/about"
+@import "../components/faq-questions"
