Add frontend client views and styles for landing page components

--- a/web/frontend-admin/assets/styles/components/footer.sass
+++ b/web/frontend-admin/assets/styles/components/footer.sass
@@ -1,5 +1,6 @@
 .footer
   background-color: $gray-light
+  border-radius: 18px
   @include media(950)
     padding-top: 20px
     padding-bottom: 32px
