--- a/web/frontend-client/assets/styles/components/cap.sass
+++ b/web/frontend-client/assets/styles/components/cap.sass
@@ -2,6 +2,7 @@
   position: relative
   margin-bottom: 60px
   background: linear-gradient(rgba($dark, .06), rgba($dark, .04))
+  border-radius: 18px
   @include media(950)
     margin-bottom: 20px
     background: linear-gradient(rgba($dark, .03), transparent)
