--- a/web/frontend-client/assets/styles/components/menu.sass
+++ b/web/frontend-client/assets/styles/components/menu.sass
@@ -96,7 +96,6 @@
     left: 16px
     right: 16px
     bottom: 37px
-    height: 1px
     background-color: rgba($dark, .3)
     @include hover
       transition-property: background-color
@@ -112,7 +111,7 @@
   text-decoration: none
   font-size: 18px
   line-height: 22px
-  color: rgba($dark, .6)
+  color: rgba($orange, .6)
   @include media(1240)
     display: none
 
