--- a/web/frontend-client/assets/styles/components/order-form.sass
+++ b/web/frontend-client/assets/styles/components/order-form.sass
@@ -9,6 +9,9 @@
   padding: 60px 100px
   background: linear-gradient(rgba($dark, .06), rgba($dark, .04))
   background-size: cover
+  border-radius: 18px
+  @include media(1240)
+    padding: 48px
 
 .order-form__title
   margin-bottom: 24px
