--- a/web/frontend-client/assets/styles/components/production.sass
+++ b/web/frontend-client/assets/styles/components/production.sass
@@ -1,11 +1,11 @@
-.about
+.production
   margin-bottom: 115px
   @include media(1240)
     margin-bottom: 48px
 
-//.about__cont
+//.production__cont
 
-.about__area
+.production__area
   display: flex
   margin-bottom: 42px
   @include media(1240)
@@ -14,7 +14,7 @@
   @include media(950)
     display: block
 
-.about__info
+.production__info
   margin-right: 100px
   @include media(1240)
     margin-right: 16px
@@ -22,28 +22,28 @@
     margin-right: 0
     margin-bottom: 16px
 
-.about__title
+.production__title
   display: block
   font-weight: bold
   margin-bottom: 20px
   @include media(1240)
     margin-bottom: 20px
 
-.about__text
+.production__text
   margin-bottom: 8px
 
-.about__list
+.production__list
   margin-bottom: 66px
   @include media(1240)
     margin-bottom: 16px
 
-.about__item
+.production__item
   &:not(&:last-child)
     margin-bottom: 8px
     @include media(1240)
       margin-bottom: 8px
 
-.about__offer
+.production__offer
   padding: 28px 42px
   border-radius: 18px
   background-color: rgba($green, .1)
@@ -52,7 +52,7 @@
   @include media(950)
     max-width: none
 
-.about__picture
+.production__picture
   width: 476px
   flex-shrink: 0
   margin-top: 2px
@@ -62,14 +62,13 @@
     width: 100%
   @include media(520)
     position: relative
-    padding-top: 81.4%
+    padding-top: 100%
 
-.about__image
+.production__image
   height: 388px
-  border-radius: 6px
+  border-radius: 18px
   @include media(1240)
     height: 222px
-    border-radius: 3px
   @include media(950)
     height: 528px
   @include media(700)
@@ -82,7 +81,7 @@
     bottom: 0
     left: 0
 
-.about__video
+.production__video
   width: 1176px
   @include media(1240)
     width: 852px
@@ -95,7 +94,7 @@
     width: 100%
     padding-top: 56.25%
 
-.about__iframe
+.production__iframe
   width: 100%
   height: 662px
   border-radius: 6px
