--- a/web/frontend-client/assets/styles/components/products.sass
+++ b/web/frontend-client/assets/styles/components/products.sass
@@ -54,6 +54,7 @@
 .products__image
   height: 270px
   margin-bottom: 12px
+  border-radius: 18px
   @include media(1240)
     height: 260px
   @include media(950)
