--- a/web/frontend-client/assets/styles/components/showcase.sass
+++ b/web/frontend-client/assets/styles/components/showcase.sass
@@ -1,11 +1,11 @@
-.what-famous
+.showcase
   margin-bottom: 80px
   @include media(1240)
     margin-bottom: 48px
 
-//.what-famous__cont
+//.showcase__cont
 
-.what-famous__title
+.showcase__title
   display: block
   font-weight: bold
   margin-bottom: 80px
@@ -14,13 +14,13 @@
   @include media(700)
     margin-bottom: 20px
 
-.what-famous__text
+.showcase__text
   margin-bottom: 48px
   max-width: 880px
   @include media(1240)
     margin-bottom: 23px
 
-.what-famous__list
+.showcase__list
   display: flex
   margin: 0 -8px
   flex-wrap: wrap
@@ -28,7 +28,7 @@
     display: block
     margin: 0
 
-.what-famous__item
+.showcase__item
   flex-grow: 1
   margin: 0 8px
   margin-bottom: 40px
@@ -43,7 +43,7 @@
     width: 100%
     margin-bottom: 16px
 
-.what-famous__image
+.showcase__image
   width: 106px
   height: 106px
   margin: 0 auto
@@ -53,7 +53,7 @@
     height: 40px
     margin: 0 16px 0 0
 
-.what-famous__headline
+.showcase__headline
   display: block
   text-align: center
   max-width: 270px
