--- a/web/frontend-client/assets/styles/pages/index.sass
+++ b/web/frontend-client/assets/styles/pages/index.sass
@@ -3,6 +3,6 @@
 @import "../components/cap"
 @import "../components/products"
 @import "../components/orders"
-@import "../components/about"
-@import "../components/faq-questions"
-@import "../components/what-famous"
+@import "../components/production"
+@import "../components/faq"
+@import "../components/showcase"
