Add policy, error and thank you pages with styles and components

--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -12,6 +12,8 @@
 
   const pages = [
     { view: 'index', name: 'Главная', style: 'index', priority: 2, link: '/' },
+    { view: 'error', name: 'Ошибка', style: 'error', priority: false, link: '/error.html' },
+    { view: 'policy', name: 'Политика конфиденциальности', style: 'policy',  priority: false, link: '/policy.html', showInSiteMap: true},
   ]
 
   function getPage(view) {
