--- a/web/frontend-client/assets/styles/components/thank.sass
+++ b/web/frontend-client/assets/styles/components/thank.sass
@@ -32,6 +32,7 @@
   padding: 14px 32px 18px
   font-size: 24px
   line-height: 32px
+  border-radius: 18px
   @include media(1240)
     padding: 13px 24px 15px
     font-size: 20px
