--- a/web/frontend-client/assets/views/components/thank&error/thank.pug
+++ b/web/frontend-client/assets/views/components/thank&error/thank.pug
@@ -1,8 +1,8 @@
 mixin thanks404 (caption, textArr)
-  .thanks
-    .thanks__cont.cont
-      h1.thanks__caption.caption= caption
+  .thank
+    .thank__cont.cont
+      h1.thank__caption.caption= caption
       each text in textArr
-        p.thanks__text= text
-      .thanks__btn-box
-        a.thanks__button.button_green(href=getLinkPage('index')) На главную
+        p.thank__text= text
+      .thank__btn-box
+        a.thank__button.button-orange(href=getLinkPage('index')) На главную
