Add delivery page with map, components and styles

--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -13,7 +13,9 @@
   const pages = [
     { view: 'index', name: 'Главная', style: 'index', priority: 2, link: '/' },
     { view: 'error', name: 'Ошибка', style: 'error', priority: false, link: '/error.html' },
-    { view: 'policy', name: 'Политика конфиденциальности', style: 'policy',  priority: false, link: '/policy.html', showInSiteMap: true},
+    { view: 'policy', name: 'Политика конфиденциальности', style: 'policy',  priority: false, link: '/policy.html'},
+    { view: 'delivery', name: 'Доставка', style: 'delivery',  priority: false, link: '/delivery.html'},
+
   ]
 
   function getPage(view) {
