--- a/web/frontend-client/assets/styles/components/menu.sass
+++ b/web/frontend-client/assets/styles/components/menu.sass
@@ -44,10 +44,10 @@
 
 .header__phone
   position: absolute
-  top: 6px
+  top:0px
   right: 112px
   display: inline-block
-  padding: 33px 16px 35px
+  padding: 34px 16px
   font-size: 18px
   line-height: 22px
   color: rgba($dark, .6)
@@ -73,7 +73,7 @@
   position: relative
   display: inline-block
   vertical-align: top
-  padding: 38px 16px 40px
+  padding: 33px 16px 33px
   text-decoration: none
   font-size: 18px
   line-height: 22px
@@ -107,7 +107,7 @@
   position: relative
   display: inline-block
   vertical-align: top
-  padding: 39px 15px 36px
+  padding: 34px 15px
   text-decoration: none
   font-size: 18px
   line-height: 22px
