--- a/web/frontend-client/assets/views/components/delivery/delivery.pug
+++ b/web/frontend-client/assets/views/components/delivery/delivery.pug
@@ -21,17 +21,17 @@
 
 article.delivery
   .delivery__cont.cont
-    h1.delivery__caption.caption Доставка и упаковка
+    h1.delivery__caption.caption оставка задников для обуви
     p.delivery__text-big.
-      Мы рассчитываем стоимость разных вариантов доставки и подбираем самый выгодный. Тщательно упаковываем все товары
-      и используем только проверенных перевозчиков для того, чтобы вы получили заказ в полной сохранности.
-    h2.delivery__title.title Доставка по России и СНГ
+      Мы предлагаем быструю и надежную доставку задников для обуви по всей России. Выбираем оптимальный способ
+      доставки с учетом срочности и стоимости. Каждый задник тщательно упакован для сохранности формы и качества.
+    h2.delivery__title.title Способы доставки
     p.delivery__text.text.
-      Отправляем товары во все города России и стран СНГ транспортными компаниями или почтой. Стоимость доставки
-      можно включить в счет или оплатить по факту получения товара.
+      Отправляем задники для обуви во все регионы России и страны СНГ через проверенные транспортные компании: СДЭК, Деловые Линии, ПЭК и Почту России.
+      Стоимость доставки можно включить в общий счет или оплатить при получении.
     h3.delivery__headline.headline Самовывоз
     p.delivery__text.text.
-      Возможен самовывоз с производства в Кирове или со склада в Москве (при наличии товара на складе).
+     Вы можете забрать заказанные задники самостоятельно с нашего производства в Кировской области, п. Вахруши.
     .delivery__area
       ul.delivery__list
         each item in deliveryList
