--- a/web/frontend-client/assets/views/pages/delivery.pug
+++ b/web/frontend-client/assets/views/pages/delivery.pug
@@ -1,8 +1,8 @@
 extends ../components/_layout/layout
 
 block head
-  +title('Доставка и упаковка офисных стульев Хит')
-  +description('Способы доставки и упаковки стульев Хит от производителя')
+  +title('Доставка и упаковка задников из кожкартона саламндер')
+  +description('Способы доставки и упаковки задников из кожкартона саламндер от производителя')
 
 block body
   include ../components/delivery/delivery
