Add payment and delivery pages with styles, components and assets

--- a/web/frontend-client/assets/styles/components/footer.sass
+++ b/web/frontend-client/assets/styles/components/footer.sass
@@ -15,8 +15,8 @@
 .footer__logo
   display: block
   padding: 48px 16px
-  margin-left: -16px
-  margin-right: 61px
+  margin-left: 0px
+  margin-right: 180px
   @include media(1240)
     padding: 32px 16px
   @include media(950)
@@ -47,14 +47,14 @@ a.footer__logo:hover
     padding: 12px 0
 
 .footer__policy-link::before
-  @include media(1240)
+  @include media(950)
     position: absolute
     content: ''
     left: 0
     top: 0
     width: 100%
     height: 1px
-    background-color: $gray-dark
+    background-color: $dark
 
 .footer__copyright
   display: block
