--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -15,6 +15,8 @@
     { view: 'error', name: 'Ошибка', style: 'error', priority: false, link: '/error.html' },
     { view: 'policy', name: 'Политика конфиденциальности', style: 'policy',  priority: false, link: '/policy.html'},
     { view: 'delivery', name: 'Доставка', style: 'delivery',  priority: false, link: '/delivery.html'},
+    { view: 'payment', name: 'Оплата', style: 'payment',  priority: false, link: '/payment.html'},
+
 
   ]
 
