--- a/web/frontend-client/assets/views/components/_layout/header.pug
+++ b/web/frontend-client/assets/views/components/_layout/header.pug
@@ -2,13 +2,13 @@
   const menuList = [
     {name: 'Главная', link: '/', view: 'index'},
     {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
-    {name: 'Контакты', link: '/contacts.html', view: 'contacts'}
+    {name: 'Оплата', link: '/payment.html', view: 'payment'}
   ]
 
   const menuMobileList = [
     {name: 'Главная', link: '/', view: 'index'},
     {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
-    {name: 'Контакты', link: '/contacts.html', view: 'contacts'}
+    {name: 'Оплата', link: '/payment.html', view: 'payment'}
   ]
 
 header.header(data-element="menu")
