--- a/web/frontend-client/assets/views/components/delivery/delivery.pug
+++ b/web/frontend-client/assets/views/components/delivery/delivery.pug
@@ -1,33 +1,25 @@
 -
   const deliveryList = [
     {
-      name: 'Офис и шоурум в Кирове',
-      address: 'Орловская, 4Г',
+      name: 'Производство',
+      address: 'п. Вахруши, ул. Рабочая, д. 30',
       time: [
         'ПН-ПТ: с 8:00 до 17:00 (мск)',
         'СБ, ВС: с 11:00 до 15:00 (мск)'
       ]
     },
-    {
-      name: 'Склад в Москве',
-      address: 'Москва, Сормовский проезд, 7А',
-      time: [
-        'ПН-ЧТ: с 10:00 до 17:00 (мск)',
-        'ПТ: с 10:00 до 16:00 (мск)'
-      ]
-    }
   ]
 
 
 article.delivery
   .delivery__cont.cont
-    h1.delivery__caption.caption оставка задников для обуви
+    h1.delivery__caption.caption Доставка задников для обуви
     p.delivery__text-big.
       Мы предлагаем быструю и надежную доставку задников для обуви по всей России. Выбираем оптимальный способ
-      доставки с учетом срочности и стоимости. Каждый задник тщательно упакован для сохранности формы и качества.
+      доставки с учетом срочности и стоимости. Задники тщательно упакованы для сохранности формы и качества.
     h2.delivery__title.title Способы доставки
     p.delivery__text.text.
-      Отправляем задники для обуви во все регионы России и страны СНГ через проверенные транспортные компании: СДЭК, Деловые Линии, ПЭК и Почту России.
+      Отправляем задники для обуви во все регионы России через проверенные транспортные компании: СДЭК, Деловые Линии, ПЭК и Почту России.
       Стоимость доставки можно включить в общий счет или оплатить при получении.
     h3.delivery__headline.headline Самовывоз
     p.delivery__text.text.
@@ -40,5 +32,4 @@ article.delivery
             span.delivery__address= item.address
             each elem in item.time
               span.delivery__time= elem
-      .delivery__map#delivery-map(
-        data-coord-x="58.6007633118822", data-coord-y="49.675127133976154", data-zoom="6",)
+      .delivery__map#delivery-map(data-zoom="6")
