Add guarantee page with styles, variables and header components

--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -16,6 +16,7 @@
     { view: 'policy', name: 'Политика конфиденциальности', style: 'policy',  priority: false, link: '/policy.html'},
     { view: 'delivery', name: 'Доставка', style: 'delivery',  priority: false, link: '/delivery.html'},
     { view: 'payment', name: 'Оплата', style: 'payment',  priority: false, link: '/payment.html'},
+    { view: 'guarantee', name: 'Гарантия', style: 'guarantee',  priority: false, link: '/guarantee.html'},
 
 
   ]
