--- a/web/frontend-client/assets/views/components/_layout/header.pug
+++ b/web/frontend-client/assets/views/components/_layout/header.pug
@@ -2,13 +2,16 @@
   const menuList = [
     {name: 'Главная', link: '/', view: 'index'},
     {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
-    {name: 'Оплата', link: '/payment.html', view: 'payment'}
+    {name: 'Оплата', link: '/payment.html', view: 'payment'},
+    {name: 'Гарантия', link: '/guarantee.html', view: 'guarantee'}
+
   ]
 
   const menuMobileList = [
     {name: 'Главная', link: '/', view: 'index'},
     {name: 'Доставка', link: '/delivery.html', view: 'delivery'},
-    {name: 'Оплата', link: '/payment.html', view: 'payment'}
+    {name: 'Оплата', link: '/payment.html', view: 'payment'},
+    {name: 'Гарантия', link: '/guarantee.html', view: 'guarantee'}
   ]
 
 header.header(data-element="menu")
