--- a/internal/templates/client-templates/templates/components/header.html
+++ b/internal/templates/client-templates/templates/components/header.html
@@ -25,7 +25,7 @@
     </div>
     <div class="header__logo">
       <picture class="header__picture">
-        <img class="header__image" src="/statics/images/logo.png" alt="Лого магазин задников">
+        <img class="header__image" src="/static/client/images/logo.png" alt="Лого магазин задников">
       </picture>
     </div>
     <a class="header__phone link_gray" href="tel:+79536799464">+7 953 679-94-64</a>
