--- a/internal/templates/client-templates/templates/pages/index.html
+++ b/internal/templates/client-templates/templates/pages/index.html
@@ -7,7 +7,7 @@
         <a class="cap__button button-orange text-big" href="#book-discount" data-role="scroll-to-anchor">Заказать</a>
       </div>
       <picture class="cap__picture">
-        <img class="cap__image" src="/statics/images//cap/zadnik-cap.png" alt="Задник из кожкартона" loading="lazy">
+        <img class="cap__image" src="/static/client/images/cap/zadnik-cap.png" alt="Задник из кожкартона" loading="lazy">
       </picture>
     </div>
 </section>
@@ -30,27 +30,27 @@
       <span class="showcase__title title">Чем хорош задник из кожкартона?</span>
       <div class="showcase__list">
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-1.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-1.svg" alt="#">
           <span class="showcase__headline headline">Повышенная прочность</span>
         </div>
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-2.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-2.svg" alt="#">
           <span class="showcase__headline headline">Анатомическая форма</span>
         </div>
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-3.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-3.svg" alt="#">
           <span class="showcase__headline headline">Влагоустойчивость</span>
         </div>
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-4.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-4.svg" alt="#">
           <span class="showcase__headline headline">Экологичность</span>
         </div>
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-5.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-5.svg" alt="#">
           <span class="showcase__headline headline">Комфорт при носке</span>
         </div>
         <div class="showcase__item">
-          <img class="showcase__image" src="/statics/images/showcase/showcase-6.svg" alt="#">
+          <img class="showcase__image" src="/static/client/images/showcase/showcase-6.svg" alt="#">
           <span class="showcase__headline headline">Легкость</span>
         </div>
       </div>
@@ -69,9 +69,9 @@
           <p class="production__offer text-big">Изготовим задник из кожкартона специально для вас: изменим фасон, выберем модификацию и подберем индивидуальный размер</p>
         </div>
         <picture class="production__picture">
-          <source srcset="/statics/images/about/about-1_476.webp 1x, /statics/images/about/about-1_714.webp 1.5x" type="image/webp">
-          <source srcset="/statics/images/about/about-1_476.jpg 1x, /statics/images/about/about-1_714.jpg 1.5x">
-          <img class="production__image" src="/statics/images/about/about-1_476.jpg" alt="Производитель задника из кожкартона и стелек - фото" title="Производитель задника из кожкартона и стелек" loading="lazy">
+          <source srcset="/static/client/images/about/about-1_476.webp 1x, /static/client/images/about/about-1_714.webp 1.5x" type="image/webp">
+          <source srcset="/static/client/images/about/about-1_476.jpg 1x, /static/client/images/about/about-1_714.jpg 1.5x">
+          <img class="production__image" src="/static/client/images/about/about-1_476.jpg" alt="Производитель задника из кожкартона и стелек - фото" title="Производитель задника из кожкартона и стелек" loading="lazy">
         </picture>
       </div>
     </div>
@@ -118,7 +118,7 @@
           <div class="order-form__btn-box order-form__input-box_name">
             <button class="order-form__button button-orange text" data-role="feedback-form__button">Заказать</button>
             <span class="order-form__policy text-tiny">и принять
-              <a class="order-form__policy-link" href="{&quot;view&quot;:&quot;policy&quot;,&quot;name&quot;:&quot;Политика конфиденциальности&quot;,&quot;style&quot;:&quot;policy&quot;,&quot;priority&quot;:false,&quot;link&quot;:&quot;/policy.html&quot;}">Политику конфиденциальности</a>
+              <a class="order-form__policy-link" href="/policy">Политику конфиденциальности</a>
             </span>
           </div>
         </form>
