--- a/web/frontend-client/assets/views/_variables.pug
+++ b/web/frontend-client/assets/views/_variables.pug
@@ -17,6 +17,7 @@
     { view: 'delivery', name: 'Доставка', style: 'delivery',  priority: false, link: '/delivery.html'},
     { view: 'payment', name: 'Оплата', style: 'payment',  priority: false, link: '/payment.html'},
     { view: 'guarantee', name: 'Гарантия', style: 'guarantee',  priority: false, link: '/guarantee.html'},
+    { view: '404', name: 'Ошибка 404', style: 'error404', priority: false, link: '/404.html' },
 
 
   ]
