--- a/internal/templates/client-templates/templates/components/footer.html
+++ b/internal/templates/client-templates/templates/components/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
   <div class="footer__cont cont">
     <span class="footer__logo">
-      <img class="footer__image" src="/statics/images/logo.png" alt="Логотип">
+      <img class="footer__image" src="/static/client/images/logo.png" alt="Логотип">
     </span>
     <a class="footer__policy-link link-dark text" href="/policy.html">Политика конфиденциальности</a>
     <span class="footer__copyright text">© {{.CurrentYear}} Все права защищены</span>
