--- a/internal/templates/client-templates/templates/layout/base.html
+++ b/internal/templates/client-templates/templates/layout/base.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="preload" href="/statics/fonts/montserrat.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="/statics/fonts/montserratbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="stylesheet" href="/statics/styles/index.css" />
-  <link rel="icon" type="image/png" href="/statics/images/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/statics/images/favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" href="/statics/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="preload" href="/static/client/fonts/montserrat.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="/static/client/fonts/montserratbold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{staticWithHash (printf "/static/client/css/%s.css" .View)}}" />
+  <link rel="icon" type="image/png" href="/static/client/images/favicon/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/static/client/images/favicon/favicon-16x16.png" sizes="16x16">
+  <link rel="icon" href="/static/client/images/favicon/favicon.ico" type="image/x-icon">
   <meta property="og:type" content="website">
   <meta property="og:site_name" content="задниксторе.рф">
   <meta property="og:locale" content="ru_RU">
@@ -27,11 +27,11 @@
   {{template "footer" .}}
   {{template "cookies" .}}
   
-  <script src="/statics/scripts/script.js"></script>
-  <link rel="prefetch" href="/statics/styles/error.css" as="style">
-  <link rel="prefetch" href="/statics/styles/policy.css" as="style">
-  <link rel="prefetch" href="/statics/styles/delivery.css" as="style">
-  <link rel="prefetch" href="/statics/styles/payment.css" as="style">
-  <link rel="prefetch" href="/statics/styles/guarantee.css" as="style">
+  <script src="/static/client/scripts/script.js"></script>
+  <link rel="prefetch" href="/static/client/styles/error.css" as="style">
+  <link rel="prefetch" href="/static/client/styles/policy.css" as="style">
+  <link rel="prefetch" href="/static/client/styles/delivery.css" as="style">
+  <link rel="prefetch" href="/static/client/styles/payment.css" as="style">
+  <link rel="prefetch" href="/static/client/styles/guarantee.css" as="style">
 </body>
 </html>
