--- a/internal/templates/client-templates/templates/components/footer.html
+++ b/internal/templates/client-templates/templates/components/footer.html
@@ -5,7 +5,7 @@
       <img class="footer__image" src="/static/client/images/logo.png" alt="Логотип">
     </span>
     <a class="footer__policy-link link-dark text" href="/policy.html">Политика конфиденциальности</a>
-    <span class="footer__copyright text">© {{.CurrentYear}} Все права защищены</span>
+    <span class="footer__copyright text">© 2025 г. Все права защищены</span>
   </div>
 </footer>
 {{end}}
