--- a/web/frontend-client/assets/views/components/index/products.pug
+++ b/web/frontend-client/assets/views/components/index/products.pug
@@ -1,15 +1,15 @@
 -
   const productList = [{
       images: [
-        { path: 'products-19', name: 'Стол Лофт-1', price: '29990' },
-        { path: 'products-18', name: 'Стол Лофт А1', price: '29990' },
-        { path: 'products-17', name: 'Стол Лофт-2', price: '29990' },
-        { path: 'products-16', name: 'Стол Лофт-4', price: '29990' },
-        { path: 'products-15', name: 'Стол Лофт-7', price: '29990' },
-        { path: 'products-14', name: 'Барный стол Леморей', price: '29990' },
-        { path: 'products-13', name: 'Барная стойка Парсон', price: '29990' },
-        { path: 'products-12', name: 'Журнальный стол Мэдисон', price: '29990' },
-        { path: 'products-11', name: 'Стол обеденный Boone 190', price: '29990' },
+        { path: 'products-19', name: 'Задник 1', price: '33' },
+        { path: 'products-18', name: 'Задник 2', price: '33' },
+        { path: 'products-17', name: 'Задник 3', price: '33' },
+        { path: 'products-16', name: 'Задник 4', price: '33' },
+        { path: 'products-15', name: 'Задник 5', price: '33' },
+        { path: 'products-14', name: 'Задник 6', price: '33' },
+        { path: 'products-13', name: 'Задник 7', price: '33' },
+        { path: 'products-12', name: 'Задник 8', price: '33' },
+        { path: 'products-11', name: 'Задник 9', price: '33' },
       ]
     }
   ]
@@ -21,6 +21,6 @@
       ul.products__list
         each image in item.images
           li.products__item
-            img.products__image(srcset=placeholder(270, 270), alt=`${image.name} - фото`, loading="lazy")
-            span.products__name= image.name
+            img.products__image(srcset=placeholder(270, 203), alt=`${image.name} - фото`, loading="lazy")
+            span.products__name= `Модель : ${image.name}`
             span.products__price= image.price + ' ₽'
