--- a/web/frontend-client/assets/views/components/index/order-form.pug
+++ b/web/frontend-client/assets/views/components/index/order-form.pug
@@ -2,12 +2,12 @@
   .order-form__cont.cont
     .order-form__wrapper
       h2.order-form__title.title
-        | Заказать столы лофт
+        | Заказать задник из кожкартона саламандер
       p.order-form__text.text-big Оставьте заявку, менеджер свяжется с вами для уточнения деталей
       form.order-form__form(data-role="feedback-form")
         div#captcha-container
         input(type="hidden", name="form_number", value="100")
-        input(type="hidden", name="form_name", value="Форма заказать мебель лофт")
+        input(type="hidden", name="form_name", value="Форма заказать задник из кожкартона саламандер")
         .order-form__input-box
           input.order-form__input.order-form__input_name.input.text(type="text", placeholder="Имя", name="name")
         .order-form__input-box
